--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
 
     <header>
-        <script src="js/app.js"></script>
 
         <nav>
             <div class="topnav">
@@ -75,7 +74,7 @@
             </fieldset>
         </form>
         <div class="card">
-            <img src="https://elkarim.net/uploads/img_avatar.png" alt="Avatar" style="width:100%">
+            <img src="" alt="Avatar" style="width:100%">
             <div class="container">
                 <h4><b>John Doe</b></h4>
                 <p>Architect & Engineer</p>
