--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HR System</title>
     <link rel="stylesheet" href="style/index.css">
 </head>
 
@@ -37,7 +37,7 @@
                 <br>
                 <br>
 
-                <label for="department">Department</label>
+                <label for="department">Choose a Department</label>
                 <br>
                 <select name="department" id="department">
                     <option value="Administration">Administration</option>
@@ -51,9 +51,9 @@
                 <br>
 
 
-                <label for="level">Level</label>
+                <label for="level">choose a Level</label>
                 <br>
-                <select name="level " id="level ">
+                <select name="level " id="level">
                     <option value="Junior">Junior</option>
                     <option value="Mid-Senior">Mid-Senior
                     </option>
@@ -74,11 +74,9 @@
 
             </fieldset>
         </form>
-        <div class="card">
-            <img src="" alt="Avatar" style="width:100%">
-            <div class="container">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
+        <div id="employeeDiv">
+            <div class="Show" style="background-color: blue;"></div>
+            
             </div>
         </div>
     </main>
